--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ h3 {
       <h2>
         <span class = "temperature" id="temperature"> </span> 
         <span class="units">
-          <a href = "#" id = "celsius">°C</a> |
-          <a href = "#" id ="fahr-link">°F</a>
+          <a href = "#" id = "celsiuslink">°C</a> |
+          <a href = "#" id ="fahrlink">°F</a>
       </h2>
 
       <h3 id="date">
